--- a/.github/workflows/model_retraining.yml
+++ b/.github/workflows/model_retraining.yml
@@ -45,13 +45,13 @@ jobs:
       - name: Store and Version the New Model
         run: |
           timestamp=$(cat timestamp.txt)
-          model_filename="model_${timestamp}_dt_model.joblib"
-          mv $model_filename $GITHUB_WORKSPACE/models/$model_filename
+          model_filename="wine_model_${timestamp}.joblib"
+          mv $model_filename $GITHUB_WORKSPACE/model/$model_filename
 
       - name: Commit and Push Changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add $GITHUB_WORKSPACE/models/$model_filename
+          git add $GITHUB_WORKSPACE/model/$model_filename
           git commit -m "Add updated model"
           git push
