--- a/.github/workflows/model_retraining.yml
+++ b/.github/workflows/model_retraining.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           timestamp=$(cat timestamp.txt)
           model_filename="wine_model_${timestamp}.joblib"
-          mv $model_filename $GITHUB_WORKSPACE/model/$model_filename
+          mv model/$model_filename $GITHUB_WORKSPACE/model/$model_filename
 
       - name: Commit and Push Changes
         run: |
