--- a/.github/workflows/pytest_actions.yml
+++ b/.github/workflows/pytest_actions.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
+    - name: Train and Save Model for Testing
+      run: python src/train.py
+
     - name: Run tests and generate XML report
       run: pytest --junitxml=pytest-report.xml
       continue-on-error: false
